# agentic-data-pipeline

./: .gitignore  README.md  agent_runner.py  env.example  pyproject.toml  reset_duckdb.py
prompts/: system_prompt.txt
src/agentic_data_pipeline/: agent.py  tools.py
utils/: logging.py  reset_duckdb.py
