[project]
name = "agentic-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.34",
    "duckdb>=1.4.0",
    "google-genai>=1.38.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]
